--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <title>SL4X0</title>
         <meta
             name="description"
-            content="Hello It's Abdelrhman Allam aka SL4X0❤️."
+            content="Hello It's Imran Shaikh aka Cyb❤️."
         />
-        <meta name="author" content="Abdelrhman Allam" />
+        <meta name="author" content="Imran Shaikh" />
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
@@ -161,7 +161,7 @@
                 <div class="header">
                     <img src="img/avatar1.png" alt="avatar" />
                     <div>
-                        <h1>Abdelrhman Allam</h1>
+                        <h1>Imran Shaikh</h1>
                         <p>@sl4x0</p>
                     </div>
                 </div>
