--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>SL4X0</title>
+        <title>CyberSecOpS</title>
         <meta
             name="description"
             content="Hello It's Imran Shaikh aka Cyb❤️."
